src/objects/loan__Loan_Payment_Amz_Sched_Junction__c.object
<CustomObject>
    <fields>
        <fullName>loan__Amortization_Schedule__c</fullName>
        <label>Amortization Schedule</label>
        <referenceTo>loan__Repayment_Schedule__c</referenceTo>
        <relationshipLabel>Loan Payment Amz Schedule Junction</relationshipLabel>
        <relationshipName>Loan_Payment_Amz_Sched_Junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Payment_Transaction__c</fullName>
        <label>Loan Payment Transaction</label>
        <referenceTo>loan__Loan_Payment_Transaction__c</referenceTo>
        <relationshipLabel>Loan Payment Amz Sched Junction</relationshipLabel>
        <relationshipName>Loan_Payment_Amz_Sched_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Paid_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest paid for associated schedule from the payment</description>
        <label>Paid Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Paid_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Principal paid towards the associated schedule from the payment</description>
        <label>Paid Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Waived_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Waived Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Loan Payment Amz Sched Junction</label>
    <nameField>
        <displayFormat>LPSJ-{0000000000}</displayFormat>
        <label>Payment Schedule Junction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Payment Amz Sched Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>